# gstd

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.gbs/msvc/: _shared  debug  release  warnings
s.gstd/: CMakeLists.txt
s.gstd/src/: concepts.cppm  gstd.cppm  string.cppm
s.gstd/src/co/: channel.cppm  co.cppm  io_scheduler.cppm  sequence.cppm  signal.cppm  task.cppm  thread_pool.cppm
s.gstd/src/dir/: dir.cppm
s.gstd/src/io/: LineReader.cppm  LineWriter.cppm  Reader.cppm  Writer.cppm  sync_console_writer.cppm
s.gstd/src/os/: exec.cppm  file.cppm  pipes.cppm  read_file.cppm  read_lines.cppm  read_text.cppm  write_text.cppm
s.gstd/src/os/linux/: exec_impl.cppm  file_impl.cppm  pipes_impl.cppm  x.exec_impl.cppm  x.file_impl.cppm
s.gstd/src/os/windows/: exec_impl.cppm  file_impl.cppm  pipes_impl.cppm
s.gstd/src/strconv/: strconv.cppm
s.gstd/src/strutil/: lines.cppm  string_reader.cppm  string_writer.cppm
s.gstd/unittest/: doctest.h  doctest_impl.h  doctest_main.cpp  test.co.cpp  test.exec.cpp  test.file_async.cpp  test.os_list_dir.cpp  test.os_read_lines.cpp  test.pipes.cpp  test.reader.cpp  test.sequence.elements_of.cpp  test.sequence.merge.cpp  test.sequence.take.cpp  test.string.cpp  test.strutil.lines.cpp  test.task.cpp
